Fixed box overflow in runtime control

--- a/FlexBE/style/runtimecontrol.css
+++ b/FlexBE/style/runtimecontrol.css
@@ -115,6 +115,8 @@
 	padding: 5px;
 	vertical-align: top;
 	line-height: 1.4em;
+	overflow: auto;
+	max-height: calc(66% - 37px);
 }
 
 .rc_font_subtitle {
